# CyberDreamcatcher

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  conda_env.yml  pixi.toml  pyproject.toml
blueskynet/: __main__.py  env.py  gnn.py  message_passing.py  plots.py  policy.py  utils.py
blueskynet/training/: reinforce.py  reinforce_baseline.py
cyberdreamcatcher/: __main__.py  env.py  gnn.py  message_passing.py  plots.py  policy.py  sampler.py  utils.py
notes/: _quarto.yml  cyborg.qmd  gnns.qmd  references.bib
scenarios/: Scenario2_+_User5.yaml  Scenario2_+_User5_User6.yaml  Scenario2_+_User6.yaml  Scenario2_-_User2.yaml  Scenario2_-_User2_User4.yaml
scripts/: plot-cyborg-layout.py  plot-policy-generalisation.py  plot-policy-performance.py  plot_policy_performance.py  sb3.py  train-gnn-ppo.py  train-gnn-reinforce.py  train-sb3-cyborg.py
scripts/conf/: hydra.yaml
