[project]
name = "cyberdreamcatcher"
version = "0.0.0"
description = "An Attentive Graph Agent for Topology-Adaptive Cyber Defence"
authors = [{name = "Ilya Orson Sandoval", email = "ilya.orson@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "captum>=0.7.0,<0.8.0",
    "ipython>=8.0.0,<9.0.0",
    "jupyterlab>=4.0.0,<5.0.0",
    "matplotlib>=3.8.0,<3.9.0",
    "networkx>=3.2.0,<3.3.0",
    "numpy>=1.26.0,<1.27.0",
    "pandas>=2.2.1,<2.3.0",
    "pip>=24.0.0",
    "prettytable>=3.9.0,<3.10.0",
    "torch>=2.1.0,<2.2.0",
    "pyyaml>=6.0.0,<6.1.0",
    "rich>=13.7.0,<13.8.0",
    "paramiko>=3.4.0,<3.5.0",
    "pytest>=8.0.2,<8.1.0",
    "docutils>=0.20.1,<0.21.0",
    "tqdm>=4.66.2,<4.67.0",
    "ruff>=0.3.0,<0.4.0",
    "seaborn>=0.13.2,<0.14.0",
    "bidict>=0.23.1,<0.24.0",
    "hydra-core>=1.3.2,<1.4.0",
    "tensorboard>=2.16.2,<2.17.0",
    "tensordict>=0.1.2,<0.2.0",
    "torch-geometric==2.5.0",
    "fsspec>=2024.6.1,<2025.0.0",
    "plotille>=5.0.0,<6.0.0",
    "gymnasium>=0.28.1,<0.29.0",
    "hydra-joblib-launcher>=1.2.0,<2.0.0",
]

[tool.setuptools]
packages = ["cyberdreamcatcher"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
